# AStar-beef

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  LICENSE.upstream  README.md  build.bat  build.sh  build.ts  build.zig  build.zig.zon  build_libs.bat  package.json
example/: BeefProj.toml
example/src/: Program.bf
libs/aarch64-windows-gnu/: assetsys.lib  assetsys_d.lib  astar.lib  astar_d.lib
libs/debug/: astar.lib
libs/debug/windows_x64/: astar.lib
libs/release/: astar.lib
libs/release/windows_x64/: astar.lib
libs/windows/: astar.lib  astard.lib
libs/windows/x64/: astar.lib  astar_d.lib
libs/x86_64-windows-msvc/: assetsys.lib  assetsys_d.lib  astar.lib  astar_d.lib
src/: AStar.bf  Tests.bf
